--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="landing-container">
+<!--<div class="landing-container">
     <div class="preloader-bg" id="preloader">
         <div class="cd-transition-layer">
           <div class="bg-layer"></div>
@@ -9,11 +9,55 @@
       </div>
       
     <div class="content">
-      <h1>¡Bienvenido a nuestra página!</h1>
-      <p>Explora nuestros servicios y productos.</p>
+      <p class="font-barlow">DEAD MERMAID TATTOO</p>
+      <h1 class="font-oswald">
+        ATRÉVETE A LLENAR TU PIEL
+        <br>
+        <span>DE COLOR </span>
+      </h1>
       <button class="btn btn-primary">Descubre más</button>
     </div>
+    <section>
+      <h1>LJASDLASKDHASLDK</h1>
+    </section>
 </div>
-  
+-->
+<div class="section-container">
+  <app-nav></app-nav>
+  <section id="inicio" class="inicio" #inicio>
+    <div class="landing-container">
+      <div class="preloader-bg" id="preloader">
+          <div class="cd-transition-layer">
+            <div class="bg-layer"></div>
+          </div>
+          <div class="loader">
+            <span></span>
+          </div>
+        </div>
+        
+      <div class="content">
+        <p class="font-barlow">DEAD MERMAID TATTOO</p>
+        <h1 class="font-oswald">
+          ATRÉVETE A LLENAR TU PIEL
+          <br>
+          <span>DE COLOR </span>
+        </h1>
+        <button class="btn btn-primary">Descubre más</button>
+      </div>
+    </div>
+  </section>
+  <section id="sobre-mi" #sobreMi>
+asdsadsad
+  </section>
+  <section id="conocimientos" #conocimientos>
+asdasda
+  </section>
+  <section id="experiencia" #experiencia>
+asdsad
+  </section>
+  <section id="proyectos" #proyectos>
+asdas
+  </section>
+</div>
 
 
