--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,2 +1,5 @@
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="section-container">
+    <app-nav></app-nav>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
