--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,24 +1,36 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/assets/logo3.webp" alt="Logo" class="d-inline-block align-text-top">
+      <img
+        src="/assets/logo3.webp"
+        alt="Logo"
+        class="d-inline-block align-text-top"
+      />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto navitems-custom font-barlow">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HOME</a>
+          <a class="nav-link active" aria-current="page" href="#">INICIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">SERVICIOS</a>
+          <a class="nav-link" href="#">SOBRE MÍ</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">PORTAFOLIO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">COTIZA</a>
         </li>
       </ul>
     </div>
