--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img
-        src="/assets/logo3.webp"
+        src="assets/logo3.webp"
         alt="Logo"
         class="d-inline-block align-text-top"
       />
