--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -32,7 +32,7 @@
         </button>
       </div>
       <div class="col col-right">
-        <img src="/assets/perfil-dmt.png" alt="" />
+        <img src="assets/perfil-dmt.png" alt="" />
       </div>
     </div>
   </div>
