--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -5,7 +5,7 @@
   justify-content: center; /* Centra horizontalmente el contenido */
   align-items: center; /* Centra verticalmente el contenido */
   text-align: center; /* Alinea el texto al centro */
-  background-image: url("/assets/background-2.png"); /* Ruta de la imagen */
+  background-image: url("../../../assets/background-2.png"); /* Ruta de la imagen */
   background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
