--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,6 +5,7 @@
         src="assets/logo3.webp"
         alt="Logo"
         class="d-inline-block align-text-top"
+        routerLink="inicio"
       />
     </a>
     <button
@@ -21,16 +22,18 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto navitems-custom font-barlow">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+          <a class="nav-link active" aria-current="page" routerLink="inicio">
+            INICIO
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">SOBRE MÍ</a>
+          <a class="nav-link" routerLink="about">SOBRE MÍ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">PORTAFOLIO</a>
+          <a class="nav-link" routerLink="portafolio">PORTAFOLIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">COTIZA</a>
+          <a class="nav-link" routerLink="cotiza">COTIZA</a>
         </li>
       </ul>
     </div>
