--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,39 +1,30 @@
-<div class="content-container">
-  <div class="content">
-    <div class="row">
-      <div class="col col-left">
-        <p class="font-barlow">CAMILA NEIRA</p>
-        <h1 class="font-oswald">
-          DEAD <span class="borders-black pintar">MERMAID </span> TATTOO
-        </h1>
-        <br />
-        <p class="text-par">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec finibus
-          varius risus vitae interdum. Nulla lacus justo, blandit ac felis eget,
-          finibus lacinia diam. Nullam eu turpis gravida, efficitur orci vitae,
-          luctus arcu. Morbi vel est id nunc suscipit venenatis ac vitae velit.
-          Nunc et fermentum libero, rhoncus dapibus nibh. Maecenas sapien nunc,
-          hendrerit sed lectus sed, finibus tempus arcu. Sed blandit tristique
-          odio. Phasellus sed metus erat. Etiam tortor nunc, maximus rutrum
-          justo ac, varius ullamcorper mi. Suspendisse nibh nisl, volutpat non
-          auctor fringilla, elementum a nunc. Pellentesque volutpat tortor
-          elementum ornare egestas. Integer quis bibendum nibh. Maecenas tempor
-          erat sed suscipit consectetur. Sed at mi vel elit mattis interdum vel
-          in quam. Donec odio tellus, hendrerit ut orci sed, finibus porttitor
-          leo. Vestibulum vel consequat metus. Cras vitae risus ac tellus
-          facilisis tempor ac nec nisi. Class aptent taciti sociosqu ad litora
-          torquent per conubia nostra, per inceptos himenaeos. Donec mollis
-          venenatis dui at dictum.
-        </p>
-        <br />
+<section id="inicio" class="inicio" #inicio>
+  <div class="landing-container">
+    <app-preloader></app-preloader>
 
-        <button class="btn-custom btn-1" (click)="scrollTo(portafolio)">
-          <span class="btn-text font-barlow">CONOCE MIS TRABAJOS</span>
-        </button>
-      </div>
-      <div class="col col-right">
-        <img src="assets/perfil-dmt.png" alt="" />
-      </div>
+    <div class="content">
+      <p class="font-barlow">DEAD MERMAID TATTOO</p>
+      <h1
+        class="font-oswald"
+        style="text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7)"
+      >
+        ATRÉVETE A LLENAR TU PIEL
+        <br />
+      </h1>
+      <h1 class="font-oswald">
+        <span class="borders-white pintar">DE COLOR </span>
+      </h1>
+
+      <br />
+      <button class="btn-custom btn-1">
+        <span class="btn-text font-barlow">QUIÉN SOY</span>
+      </button>
     </div>
   </div>
-</div>
+</section>
+<section id="sobre-mi" #sobreMi>
+  <app-sobre-mi></app-sobre-mi>
+</section>
+<section id="portafolio" #portafolio>
+  <app-random></app-random>
+</section>
