--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -16,13 +16,13 @@
       </h1>
 
       <br />
-      <button class="btn-custom btn-1" (click)="scrollTo(sobreMi)">
+      <button class="btn-custom btn-1" (click)="scrollTo(ASD)">
         <span class="btn-text font-barlow">QUIÉN SOY</span>
       </button>
     </div>
   </div>
 </section>
-<section id="sobre-mi" #sobreMi>
+<section id="sobre-mi" #ASD>
   <app-about [portafolio]="portafolio"></app-about>
 </section>
 <section id="portafolio" #portafolio>
