--- a/src/app/pages/cotiza/formulario-cotizacion/formulario-cotizacion.component.html
+++ b/src/app/pages/cotiza/formulario-cotizacion/formulario-cotizacion.component.html
@@ -15,11 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-left col">
-          <img
-            src="../../../../assets/imagen-1.jpg"
-            alt=""
-            class="img-shadow"
-          />
+          <img src="assets/imagen-1.jpg" alt="" class="img-shadow" />
         </div>
         <div class="col-right col font-oswald">
           <form [formGroup]="tattooForm" (ngSubmit)="enviarFormulario()">
