--- a/src/app/pages/landing/portafolio/portafolio.component.html
+++ b/src/app/pages/landing/portafolio/portafolio.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <div class="content">
-    <div class="row row-titulo text-center">
+    <div class="row row-titulo">
       <p class="font-barlow">DEAD MERMAID TATTOO</p>
       <h1 class="font-oswald">
         PORTAFOLIO -
