--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,52 @@
-<p>footer works!</p>
+<div class="container">
+  <footer
+    class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+  >
+    <div class="col-md-4 d-flex flex-column" id="#footerLogo">
+      <div class="row">
+        <a class="navbar-brand" href="#">
+          <img
+            src="assets/logo3.webp"
+            alt="Logo"
+            class="d-inline-block align-text-top"
+            routerLink="inicio"
+          />
+        </a>
+      </div>
+      <div class="row">
+        <span class="text-muted">© 2024 Dead Mermaid</span>
+      </div>
+    </div>
+
+    <!-- Redes sociales -->
+    <div
+      id="#redes"
+      class="col-md-4 d-flex flex-column redes"
+      style="align-items: flex-end"
+    >
+      <h1
+        id="redes-titulo"
+        class="font-oswald borders-white pintar-2 text-center"
+      >
+        REDES
+      </h1>
+      <ul
+        class="nav justify-content-center list-unstyled d-flex"
+        aria-labelledby="redes-titulo"
+      >
+        <li class="ms-3">
+          <fa-icon [icon]="faInstagram"></fa-icon>
+        </li>
+        <li class="ms-3">
+          <fa-icon [icon]="faTiktok"></fa-icon>
+        </li>
+        <li class="ms-3">
+          <fa-icon [icon]="faWhatsapp"></fa-icon>
+        </li>
+        <li class="ms-3">
+          <fa-icon [icon]="faFacebook"></fa-icon>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</div>
