--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,19 +1,3 @@
-.container {
-  background: rgb(10, 200, 200);
-  color: #fff;
-  min-width: 100vw;
-  display: flex;
-}
-
-#footerLogo {
-  align-items: flex-start; /* Alinea los elementos al inicio de la columna */
-  gap: 20px; /* Añade espacio entre las filas */
-}
-
-#redes-titulo {
-  font-size: 2rem;
-}
-
 footer {
   min-width: 90vw;
   margin: 0 auto;
@@ -29,4 +13,25 @@ fa-icon {
 
 h1 {
   padding-left: 10px;
+}
+
+#footerLogo {
+  align-items: flex-start; /* Alinea los elementos al inicio de la columna */
+  gap: 20px; /* Añade espacio entre las filas */
+}
+
+#redes-titulo {
+  font-size: 2rem;
+}
+
+.container {
+  background: rgb(10, 200, 200);
+  color: #fff;
+  min-width: 100vw;
+  display: flex;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
